--- a/src/components/Table.css
+++ b/src/components/Table.css
@@ -2,15 +2,18 @@
     margin:60px;
     width: 150px;
     height:150px;
-    color: #fff;
-    background-color: #754C00;
-    border-color: #835602;
+    color: #484848;
+    background-color: #EAEAEA;
+    border-color: #D8D8D8;
     border-radius:30px;
 }
 
 #foodImg{
     width: 100px;
     height: 100px;
+}
+
+#preparing{
 }
 
 #modal-foot{
