--- a/src/routes/Order.css
+++ b/src/routes/Order.css
@@ -1,4 +1,5 @@
 #tables{
+    position:relative;
     font-size:20px;
     text-align: center;
     margin-left:15px;
@@ -7,6 +8,7 @@
 }
  
 #order{
+  position:relative;
   text-align: center;
 }
 
