--- a/src/routes/Cook.css
+++ b/src/routes/Cook.css
@@ -2,9 +2,19 @@
     position: relative;
     min-height: 650px;
     margin:10px;
-    padding:20px;
+    padding:10px;
     background-color: white;
     border-radius: 10px;
+    text-align: center;
+}
+
+#cookTitle{
+  position: relative;
+  font-size:40px;
+  padding-bottom: 5px;
+  text-align: center;
+  border-bottom: 2px dashed;
+  
 }
 
 #cookContent{
