--- a/src/routes/ManageStock.css
+++ b/src/routes/ManageStock.css
@@ -2,5 +2,6 @@
     margin:10px;
     min-height: 670px;
     background-color: white;
-    padding:30px;
+    padding:20px;
+    border-radius: 10px;
 }
