--- a/src/routes/AboutMenu.css
+++ b/src/routes/AboutMenu.css
@@ -12,3 +12,10 @@
     position: relative;
     
 }
+
+#menus{
+    position: relative;
+    display:flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
