--- a/src/index.css
+++ b/src/index.css
@@ -3,9 +3,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Yeon+Sung&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Nanum+Myeongjo&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Gamja+Flower&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Gothic+A1:wght@300&display=swap');
 
 #root{
     font-family: 'Jua', sans-serif;
+}
+
+.table{
+    font-family: 'Gothic A1', sans-serif;
 }
 
 #main{
