--- a/src/routes/Order.css
+++ b/src/routes/Order.css
@@ -10,11 +10,17 @@
 }
 
 #tables{
+  position:relative;
   width:50%;
   float:left;
   text-align: center;
+  display:flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding-top:20px;
+  padding-bottom: 20px;
   border-right: 2px solid #EAEAEA;
-  min-height:670px;
+  min-height: 670px;
 }
 
 #takeOut{
