--- a/src/routes/Main.css
+++ b/src/routes/Main.css
@@ -2,12 +2,12 @@
   position: relative;
   margin:10px;
   border-radius: 10px;
-  min-height: 660px;
+  min-height: 690px;
 }
 
 #mainContent{
   position:relative;
-  min-height:660px;
+  min-height:690px;
   border-radius: 10px;
   padding-top: 20px;
   padding-bottom: 20px;
@@ -18,8 +18,8 @@
 
 #insideContent{
   position:relative;
-  width:40%;
-  border-radius: 1000px;
+  min-width: 40%;
+  border-radius: 50%;
   padding:50px;
   text-align: center;
   background-color: #ffffff;
@@ -28,7 +28,7 @@
 
 #mainImg{
   position:relative;
-  width:200px;
-  height:210px;
+  max-width:200px;
+  max-height:210px;
 }
 
